--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/launcher_icon"
+        android:logo="@drawable/launcher_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.simgeoapps.expensereport.LaunchTest"
             android:label="@string/title_activity_launch_test" >
-            <intent-filter>
+            <intent-filter> <!-- put launcher title here, else inherit from parent activity -->
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,8 +30,7 @@
         </activity>
         <activity
             android:name="com.simgeoapps.expensereport.ViewUsers"
-            android:label="@string/title_activity_view_users"
-            android:parentActivityName="com.simgeoapps.expensereport.LaunchTest" >
+            android:label="@string/title_activity_view_users" >
         </activity>
     </application>
 
