--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <application
         android:name="com.simgeoapps.expensereport.GlobalConfig"
         android:allowBackup="true"
-        android:icon="@drawable/launcher_icon"
-        android:logo="@drawable/launcher_icon"
+        android:icon="@drawable/ic_launcher"
+        android:logo="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
